fix: long titles overlapping bug

--- a/popup.css
+++ b/popup.css
@@ -116,8 +116,8 @@ p {
 }
 
 .location-item-title {
-    height: 20px;
     color: var(--base-content);
+    margin-bottom: 4px;
 }
 
 .location-item-address {
